# yado

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.example.yml  docker-compose.yml
.claude/: settings.local.json
.github/workflows/: ci.yml  docker.yml
backend/: pyproject.toml
backend/tests/: conftest.py  test_polls.py  test_ws.py
backend/yado/: database.py  main.py  models.py  schemas.py
backend/yado/routers/: polls.py  ws.py
frontend/: README.md  package-lock.json  package.json
frontend/src/lib/: api.ts
frontend/src/lib/components/: Calendar.svelte  VoteCalendar.svelte  VoteGrid.svelte
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte
frontend/src/routes/poll/[id]/: +page.svelte
frontend/src/routes/poll/[id]/admin/[token]/: +page.svelte
