[project]
name = "yado"
version = "0.1.0"
description = "Yet Another Doodle - self-hosted scheduling poll"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlmodel>=0.0.22",
    "greenlet>=3.1",
    "aiosqlite>=0.21",
    "alembic>=1.14",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
    "pyright>=1.1",
    "ruff>=0.11",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["yado"]
